--- a/angular-pwa/angular.json
+++ b/angular-pwa/angular.json
@@ -1,5 +1,8 @@
 {
-	"$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "5100ec9e-4154-4312-a1a8-2422692d93f0"
+  },
 	"version": 1,
 	"newProjectRoot": "projects",
 	"projects": {
