--- a/angular-pwa/angular.json
+++ b/angular-pwa/angular.json
@@ -27,7 +27,8 @@
 						"tsConfig": "tsconfig.app.json",
 						"assets": [
 							"src/favicon.ico",
-							"src/assets"
+							"src/assets",
+							"src/manifest.webmanifest"
 						],
 						"styles": [
 							"node_modules/@angular-architects/paper-design/assets/css/bootstrap.css",
@@ -35,7 +36,9 @@
 							"./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
 							"src/styles.css"
 						],
-						"scripts": []
+						"scripts": [],
+						"serviceWorker": true,
+						"ngswConfigPath": "ngsw-config.json"
 					},
 					"configurations": {
 						"production": {
@@ -97,7 +100,8 @@
 						"karmaConfig": "karma.conf.js",
 						"assets": [
 							"src/favicon.ico",
-							"src/assets"
+							"src/assets",
+							"src/manifest.webmanifest"
 						],
 						"styles": [
 							"./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
