--- a/angular-pwa/package.json
+++ b/angular-pwa/package.json
@@ -20,7 +20,9 @@
     "@angular/material": "^13.3.9",
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
+    "@angular/pwa": "^13.2.1",
     "@angular/router": "~13.1.0",
+    "@angular/service-worker": "~13.1.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
